[gd_scene load_steps=4 format=3 uid="uid://bmww8gq2wjx8p"]

[ext_resource type="Script" path="res://menus/UniversalScrollList.gd" id="1"]
[ext_resource type="Script" path="res://menus/media_download_queue/MediaDownloadQueue.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://coi010tlbihnq" path="res://menus/PromptPanel.tscn" id="5"]

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
auto_translate_mode = 2
layout_mode = 2
auto_translate = false
text = "adasdasdsadas"

[node name="HBUniversalScrollList" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
script = ExtResource("1")
container_path = NodePath("VBoxContainer")
horizontal_step = 0
enable_wrap_around = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBUniversalScrollList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Panel4" parent="VBoxContainer/HBoxContainer" instance=ExtResource("5")]
custom_minimum_size = Vector2(124, 31)
layout_mode = 2
action_name = "gui_cancel"
text = "Back"

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "No downloads queued!"
horizontal_alignment = 1
